fix(theme): contrast for text content of <pre> blocks in light mode
- Add docstring for `toggleTheme` function as well

--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -159,7 +159,13 @@ html {
 
 .hack pre {
   font-size: 17px;
+
 }
+
+.light pre {
+  color: #cccccc !important;
+}
+
 
 .icon {
   margin-bottom: -3px;
